mobile_view dark mode size fix

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -127,34 +127,60 @@ body {
 	justify-content: space-between;
 	padding: 5px;
 	position: relative;
-	height: 23px;
-  width: 50px;
-  margin-top: 5px;
+	height: 15px;
+  width: 30px;
+  margin-top: 8px;
   transform: scale(1.5);
+
+  @include media(">=sm") {
+    height: 23px;
+    width: 50px;
+    margin-top: 5px;
+  }
 }
 
 .label .ball {
 	background-color: white;
 	border-radius: 50%;
 	position: absolute;
-  left: 3px;
-	height: 17px;
-	width: 17px;
+  left: 1px;
+	height: 10px;
+	width: 10px;
 	transform: translateX(0px);
-	transition: transform 0.2s linear;
+  transition: transform 0.2s linear;
+  
+  @include media(">=sm") {
+    height: 17px;
+	  width: 17px;
+    left: 3px;
+  }
 }
 
 .checkbox:checked + .label .ball {
-	transform: translateX(28px);
+  transform: translateX(16px);
+  
+  @include media(">=sm") {
+    transform: translateX(28px);
+  }
 }
 
 
 .fa-moon {
-	color: #f1c40f;
+  color: #f1c40f;
+  font-size: 6.5px;
+  
+  @include media(">=sm") {
+    font-size: 14px;
+  }
 }
 
 .fa-sun {
-	color: #f39c12;
+  color: #f39c12;
+  font-size: 6.5px;
+  
+  @include media(">=sm") {
+    font-size: 14px;
+  }
 }
 
 body.main-page {
